; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/android/extr_display.c_ChromaToAndroidHal.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/android/extr_display.c_ChromaToAndroidHal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRIV_WINDOW_FORMAT_YV12 = common dso_local global i32 0, align 4
@WINDOW_FORMAT_RGB_565 = common dso_local global i32 0, align 4
@WINDOW_FORMAT_RGBX_8888 = common dso_local global i32 0, align 4
@WINDOW_FORMAT_RGBA_8888 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ChromaToAndroidHal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ChromaToAndroidHal(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 128, label %5
    i32 132, label %5
    i32 131, label %7
    i32 130, label %9
    i32 129, label %11
  ]

5:                                                ; preds = %1, %1
  %6 = load i32, i32* @PRIV_WINDOW_FORMAT_YV12, align 4
  store i32 %6, i32* %2, align 4
  br label %14

7:                                                ; preds = %1
  %8 = load i32, i32* @WINDOW_FORMAT_RGB_565, align 4
  store i32 %8, i32* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @WINDOW_FORMAT_RGBX_8888, align 4
  store i32 %10, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @WINDOW_FORMAT_RGBA_8888, align 4
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %11, %9, %7, %5
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
